# media-agent

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
app/models/: asset_manifest.py
models/: __init__.py  resolution.py
resolvers/: __init__.py  local.py  placeholder.py
rights/: __init__.py  license_validator.py
scripts/: generate_media.py  media.py  verify_media_integration.py
tests/: conftest.py
tests/unit/: test_contracts_verify.py  test_e2e_library.py  test_library_verify.py  test_local_resolver.py  test_media_verify.py  test_verify_script.py
