[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "media-agent"
version = "0.1.0"
dependencies = [
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
    "jsonschema>=4.0",
]

[project.scripts]
media = "scripts.media:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "resolvers*", "rights*", "scripts*"]
